fixed the dark mode button

--- a/style.css
+++ b/style.css
@@ -20,6 +20,12 @@ font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Ox
 font-weight: 700;
 
 }
+.btn{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 60px;
+}
 
 .nav-elem:hover .dropdown {
 display: block; 
@@ -699,7 +705,7 @@ body {
     background-color: transparent;
 }
 #mode-toggle {
-    position: fixed;
+   
     top: 20px;
     right: 20px;
     background-color: #0BA34E;
@@ -710,21 +716,19 @@ body {
     color: white;
     font-size: 18px;
     cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    
 }
 
 #connect-button{
     background-color:  #0BA34E;
+    border-radius: 50%;
+    border:  #0BA34E;
     color: white;
+    margin: 10px;
     padding-left: 15px;
     padding-right: 15px;
     padding-top: 10px;
     padding-bottom: 10px;
-    margin: 10px;
-    border-radius: 50%;
-    border:  #0BA34E;
     display: inline-block;
     text-align: center;
     cursor: pointer;
